# UAlberta-Chatbot

./: .gitignore  Model Validation - Sheet1.csv  README.md  analytics.py  app.py  calendar_parser.py  chatbot.py  chatbot_graph.py  chunker.py  course_graph.py  course_tools.py  evaluation.py  filter_crawler.py  filter_suite.py  js_scraper.py  main.py  make_db.py  pyproject.toml  requirements.txt  retriever.py  scraper.py  simple_chat.py  test_chatbot.py  test_retrieval.py  vector_store.py  web_crawler.py
.claude/: settings.local.json
courses/: course_tools.py
data/: check_mixed_prereqs.py  check_prereqs.py  check_prereqs2.py  course_graph.json  evaluation_cases.json  evaluation_history.json  feedback.json  filter_calendar.py  filter_math.py  filter_suite_results.json  generate_synthetic.py  inspect_honors.py  pages.json  pages_calendar.json  pages_calendar_filtered.json  pages_filtered.json  pages_js.json  pages_math.json  pages_synthetic.json  survey.py
db/: chroma.sqlite3
feedback/: __init__.py  analytics.py  feedback.py
ollama_db/813703de-4aec-48fb-a531-14996a9decfc/: index_metadata.pickle
report/: main.aux  main.out  main.tex
retrieval/: __init__.py  chunker.py  embeddings.py  make_db.py  retriever.py  vector_store.py
scraping/: fetch_courses.py  filter_crawler.py  filter_suite.py  html_parser.py  hybrid_scraper.py  merge_pages.py  parsers.py
tests/: benchmark.py  debug_cr.py  evaluation.py  ragas_eval.py  ragas_test.py  run_suite.py  test_chatbot.py  test_retrieval.py  test_suite.py
tests/results/: benchmark_20260425_114508.ipynb  ragas_raw.csv  (+10 more)
(+8 files in other folders)
