[project]
name = "ualberta-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.7",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "requests-html>=0.10.0",
    "selenium>=4.43.0",
    "streamlit>=1.56.0",
]
