[project]
name = "ualberta-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.7",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-text-splitters>=1.1.1",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers==3.4.1",
    "streamlit>=1.56.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
]
